# wechat-content-fetcher

./: .gitignore  README.md  SKILL.md  config.example.json  config.ima.json  pyproject.toml  requirements.txt  run_fetcher.py
.github/workflows/: deploy-pages.yml
docs/requirements/: 2026-07-11-wechat-content-fetcher-requirements.md
docs/superpowers/plans/: 2026-07-06-wechat-sync-state-refactor.md
docs/superpowers/specs/: 2026-07-06-wechat-sync-state-design.md
scripts/: nightly_sync.ps1  nightly_sync.sh
site_output/_pages/: .trigger  index.html
site_output/_pages/01/: 0531.html  10-48.html  10.html  100mw-200mwh.html  104-pdf.html  12-4-aidc.html  125kw-pcs.html  12gwh.html  1ah-587ah-vs-588ah-6-25mwh.html  2024-2026-14.html  2026-25.html  2026-wechatarticle-1447a9a45bff974bbf73bf04fdc1fd29-fe4fbab3628c3cbe4d2d0ddcd9730126.html  2026.html  280.html  300-word.html  300.html  32-gwh.html  3gw-24gwh-quinbrook-8.html  400v-800v.html  5-gb-t-3624-2018.html  6-7mwh.html  6-x.html  67.html  77-sst.html  770mv-mccb.html  800v-ai-dc-dc.html  800v-hvdc-vs.html  90-70-3.html  agc-avc.html  ai-4.html  (+103 more)
src/wechat_content_fetcher/: __init__.py  assets.py  bundle.py  cli.py  config.py  fixtures.py  ima_client.py  models.py  pages.py  publish.py  renderer.py  slug.py  state.py  storage.py  sync.py  wechat.py  wechat_fetcher.py
tests/: test_article_page.py  test_assets.py  test_bundle.py  test_cli.py  test_ima_api.py  test_ima_client.py  test_pages.py  test_renderer.py  test_state.py  test_sync_ima.py  test_wechat_markdown.py
tests/fixtures/: sample_wechat_article.md
(+11 files in other folders)
