[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wechat-content-fetcher"
version = "0.1.0"
description = "Export WeChat articles from Tencent IMA folders into a static site for NotebookLM ingestion."
requires-python = ">=3.10"
dependencies = [
  "markdown>=3.6",
  "PyYAML>=6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
